Fix collapsed logo

--- a/styles/sider.module.less
+++ b/styles/sider.module.less
@@ -30,4 +30,5 @@
 
 .logo {
   text-align: center;
+  margin-bottom: 5px;
 }
